# DTLTestbed

./: .gitmodules  README.md
DataPipeline/: readme.md
DataPipeline/DataStorage/: collect_csv.py  collect_mongodb.py  ur_data.csv  xml_parse.py
DataPipeline/MTConnect/: readme.md
DataPipeline/MTConnect/Adapter/Mitutoyo/: ConfigureStatusMonitorServerConfig.xml  MCAdapter.ini  agent.cfg  readme.md  start_service.bat  stop_service.bat
DataPipeline/MTConnect/Adapter/Mitutoyo/styles/: Streams.xsl
DataPipeline/MTConnect/Adapter/UniversalRobots/: adapter.py  data_item.py  mtconnect_adapter.py  readme.md  ur5e.xml  ~$ICENSE
DataPipeline/MTConnect/Agent/Config/: Devices.xml  agent.cfg
DigitalTwinDev/PNC_Altair/: Assembly1222_MKS.abf  Assembly1222_MKS.apitmp00000.mp~  Assembly1222_MKS.h3d  Assembly1222_MKS.mdl  Assembly1222_MKS.mrf  Assembly1222_MKS.nam  Assembly1222_MKS.py  Assembly1222_MKS.x_t  Assembly1222_MKS.xml  Assembly1222_MKS_MS_input_gra.x_t  MTC-to-Activate 12 22-test.scm
DigitalTwinDev/UR_Matlab/: readme.md
DigitalTwinDev/UR_Matlab/MATLAB/: UR5eLowerArm.stp  UR5eWrist3.stp  UR5e_Gripper_RT_IO_Differential.slx
DigitalTwinDev/UR_Matlab/MATLAB/Gripper Parts/: GripperInertiaData.xlsx  Left Bottom Link.STEP  Left Constraining Arm.STEP  Left Finger Joint.STEP  Left Finger Pad.STEP  Left Finger.STEP  Left Top Link.STEP  Right Bottom Link.STEP  Right Constraining Arm.STEP  Right Finger Joint.STEP  Right Finger Pad.STEP  Right Finger.STEP  Right Top Link.STEP
DigitalTwinDev/UR_Matlab/Processing (source)/MTC_to_Simulink_Adapter_Analysis_Differential/: Data Document Descriptions.md  Data_2023-7-10_12-25-53.xlsx  Data_2023-7-10_12-59-8.xlsx  Data_2023-7-10_13-10-52.xlsx  Data_2023-7-12_14-11-0.xlsx  Data_2023-7-12_14-4-4.xlsx  Data_2023-7-21_11-4-47.xlsx  GUI.pde  GUI_Elements.pde  Graphing.pde  Quaternions.pde  UR5e_Specific.pde  XML.pde
DigitalTwinDev/UR_Matlab/Processing (source)/MTC_to_Simulink_Adapter_Analysis_Differential/data/: MTC_2023-7-20_10-36-45.xml  MTC_2023-7-20_10-37-15.xml  config.json
DigitalTwinDev/UR_Matlab/Processing/data/: config readme.md  data_ur_short.xml  ur5e.xml
DigitalTwinDev/UR_Matlab/Processing/source/: Analysis.pde  InfoDump.pde  MTC_to_Simulink_Adapter_Analysis_Differential.java  MTC_to_Simulink_Adapter_Analysis_Differential.pde  MTConnect.pde  MainMenu.pde  Mode.pde  Mode_GUI.pde  Simulink.pde  Stats.pde  Util.pde
DigitalTwinDev/UR_ROS/: ROS resources.txt  Run UR ROS.md  clean.bash  move_test.csv  move_test1.ods  readme.md  rebuild.bash  setup.bash
DigitalTwinDev/UR_ROS/install/: local_setup.sh  setup.sh
DigitalTwinDev/UR_ROS/log/: latest_build
DigitalTwinDev/UR_ROS/src/integrated_ur_robotiq/: CMakeLists.txt
DigitalTwinDev/UR_ROS/src/integrated_ur_robotiq/config/: digital_controllers.yaml  physical_controllers.yaml
DigitalTwinDev/UR_ROS/src/integrated_ur_robotiq/include/integrated_ur_robotiq/: integrated_control.hpp
DigitalTwinDev/UR_ROS/src/integrated_ur_robotiq/launch/: integrated.launch.py  ur_control.launch.py
DigitalTwinDev/UR_ROS/src/integrated_ur_robotiq/src/: action_synchronizer.cpp  integrated_control_test.cpp  integrated_ui.cpp  synchronizer.cpp  ur_pose_monitor.cpp  ur_trajectory_comparator.cpp  ursim_play.py  ursim_stop.py
DigitalTwinDev/UR_ROS/src/robotiq_gripper/: CMakeLists.txt
DigitalTwinDev/UR_ROS/src/robotiq_gripper/launch/: view_gripper.launch.py
DigitalTwinDev/UR_ROS/src/robotiq_gripper/rviz/: view_urdf.rviz
DigitalTwinDev/UR_ROS/src/robotiq_gripper/src/: gripper_twin.cpp  rtde_control.cpp
DigitalTwinDev/UR_ROS/src/ur_robotiq_description/: CMakeLists.txt  package.xml
DigitalTwinDev/UR_ROS/src/ur_robotiq_moveit_config/: CMakeLists.txt
DigitalTwinDev/VVUQ/: Assembly0221_MMKS_fail_test_Run.nam  Assembly0221_MMKS_fail_test_Run.py  Assembly0221_MMKS_fail_test_Run_MS_input_gra.x_t  Assembly0221_MMKS_fail_test_Run_snapshot.mdl  MTC-to-Activate 0221-Agent-test.scm  MTC-to-Activate 0221-No Agent-test - Copy.scm  MTC-to-Activate 0221-No Agent-test.scm  copy1.csv  copy2.csv  copy3.csv  copy4.csv  copy5.csv  gcodeManipulation.ipynb  gcode_movement_num.csv  knn_anomaly_graphs.py  knn_model_.ipynb
(+75 files in other folders)
